# prediction-market-arbitrage

./: .gitignore  AGENT.md
dashboard-backend/: .env.local.example  .gitignore  Dockerfile  README.md  README_MATCHING.md  main.py  pyproject.toml
dashboard-backend/dashboard_backend/: app.py  background.py  config.py
dashboard-backend/dashboard_backend/api/: routes.py
dashboard-backend/dashboard_backend/core/: cache.py  documents.py  edge.py  models.py  normalize.py
dashboard-backend/dashboard_backend/ingress/: clob.py  gamma.py  market_stream.py
dashboard-backend/dashboard_backend/integrations/: __init__.py  openai_client.py
dashboard-backend/dashboard_backend/store/: redis_store.py
dashboard-backend/dashboard_backend/workers/: __init__.py  embedding.py  matching.py
dashboard-frontend/: package-lock.json
dashboard-frontend/app/: globals.css  layout.tsx  page.tsx
dashboard-frontend/components/: connection-status.tsx  cross-opportunities-metrics.tsx  cross-opportunities-section.tsx  cross-opportunities-table.tsx  dashboard-client.tsx  edge-distribution.tsx  filters-bar.tsx  live-metrics.tsx  market-detail-drawer.tsx  opportunities-table.tsx
dashboard-frontend/hooks/: use-cross-opportunities.ts  use-opportunities.ts  use-sse.ts
dashboard-frontend/lib/: api.ts  types.ts
dashboard-frontend/lib/utils/: opportunity.ts
