[project]
name = "dashboard-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.3",
    "httpx>=0.27.0",
    "py-clob-client>=0.25.0",
    "pydantic-settings>=2.2.1",
    "redis>=5.0.0",
    "websockets>=12.0",
    "uvicorn[standard]>=0.27.0",
]
